k8s/coach-seat-service.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coach-seat-service
  namespace: railway-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app: coach-seat-service
  template:
    metadata:
      labels:
        app: coach-seat-service
    spec:
      containers:
        - name: coach-seat-service
          image: heisamit/coach-seat-service:latest
          ports:
            - containerPort: 8080
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: coach-seat-service
  namespace: railway-system
spec:
  selector:
    app: coach-seat-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  # type: ClusterIP
