k8s/postgres-user.yaml
# postgres-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-user
  namespace: railway-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-user
  template:
    metadata:
      labels:
        app: postgres-user
    spec:
      containers:
        - name: postgres-user
          image: postgres:14-alpine # Use specific version for stability
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-user-data
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U user_admin -d user_service_db
            initialDelaySeconds: 5
            periodSeconds: 5
      volumes:
        - name: postgres-user-data
          hostPath:
            path: /data/postgres-user
            type: DirectoryOrCreate
      # volumes:
      #   - name: postgres-user-data
      #     persistentVolumeClaim:
      #       claimName: postgres-user-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-user
  namespace: railway-system
spec:
  selector:
    app: postgres-user
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
